--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@octokit/rest": "^18.12.0",
+    "@ramonak/react-progress-bar": "^4.2.0",
     "next": "^12.0.4",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
